
3.0.0 2021/01/xx
  - capture - search for GeoIP files first in /var/lib/GeoIP
  - viewer - add POST version session query APIs to support long expressions
             old GET versions still work
  - viewer - reorganize and standardize some APIs
  - viewer - put npm scripts and common npm packages at top level
  - viewer - allow viewing of large encrypted pcap files (issue #1555)
  - wise - new config UI, enable with --webconfig
  - wise - more moloch->arkime changes

2.7.1 2020/12/01
  - release - glib 2.66.2, curl 7.73.0, nghttp2 1.42.0
  - wise - fix UI queries hanging
  - viewer - fix anonymous user settings not saving
  - viewer - fix lastUsed time not always saving to ES
  - capture - new packet dedup feature https://arkime.com/settings#packet-deduplication-settings
  - capture - close pfring on exit (issue #1538)
  - capture - fix http2 parsing crash
  - db - Moloch to Arkime text fixes

2.7.0 2020/11/18
  - NOTICE - Requires ES 7.4 or newer
  - NOTICE - Moloch to Arkime rebranding in UI, everything else still Moloch
  - all - ES 7 updates, fix most depreciated warnings (mappings/templates still remain)
  - viewer - fix mpls decoding
  - viewer - new themes and logo selection
  - capture - fix http CONNECT response parsing
  - capture - New pcap-over-ip reader support
  - db - can import gz files directly now
  - db - fix issues with version importing

2.4.2 2020/11/10
  - NOTICE - db.pl upgrade is required
  - NOTICE - this is the last version to support ES 6
  - release - node 12.19.0
  - viewer - support utf8 chars in content-disposition
  - viewer - add capture process restart to timeline graphs
  - viewer - add "bookmarks"
             apply a view's expression to the search input without issuing a query
  - viewer - fix anonymous users settings not being saved
  - viewer - share hunts between users
  - viewer - move all common client bundling, scripts, and npm modules to top level
  - viewer - display business hours on sessions timeline graph