@@ -7067,6 +7067,7 @@ Db.initialize({ host: internals.elasticBase,
   usersHost: Config.get('usersElasticsearch') ? Config.getArray('usersElasticsearch', ',', '') : undefined,
   usersPrefix: Config.get('usersPrefix'),
   nodeName: Config.nodeName(),
+  hostName: Config.hostName(),
   esClientKey: Config.get('esClientKey', null),
   esClientCert: Config.get('esClientCert', null),
   esClientKeyPass: Config.get('esClientKeyPass', null),
